# sphinx-bug-20220618

./: README.rst  mypackage.py  setup.cfg  tox.ini
docs/: api.rst  conf.py  index.rst
src/: mypackage.py
